# potatis

./: .gitignore  CLAUDE.md  Cargo.toml  benchmark.sh  profile_perf.sh
mos6502/src/: cpu.rs
nes-android/src/: lib.rs
nes-cloud/: Cargo.toml
nes-cloud/src/instance/: host.rs  main.rs
nes-embedded/src/: main.rs
nes-render/: Cargo.toml  build.rs
nes-render/src/: ansi.rs  chafa_lib.rs  lib.rs  renderers.rs
nes-sdl/src/: main.rs  sdl.rs
nes-tui/: Cargo.toml
nes-tui/src/: host.rs  main.rs
nes-wasm/src/: lib.rs
nes/src/: cartridge.rs  nes.rs  nesbus.rs
nes/src/ppu/: ppu.rs
nes/tests/: blargg.rs  nestest.rs
profile/: Cargo.toml  dhat.sh  samply.sh  xctrace.sh
profile/src/: cpu.rs  main.rs  memory.rs
