[workspace]
resolver = "2"
members = [
  "common",
  "mos6502",
  "nes",
  "nes-sdl",
  "nes-wasm",
  "nes-android",
]

exclude = [
  "nes-embedded",
  "nes-cloud",
  "nes-render",
  "nes-tui",
  "profile",
]

[profile.test]
opt-level = 3 # Otherwise integration tests take too long
lto = "thin"  # Link-time optimization for better performance
codegen-units = 1  # Better optimization at cost of compile time

[profile.release-with-debug]
inherits = "release"
debug = true

