[package]
name = "profile"
version = "0.1.0"
edition = "2021"

[dependencies]
nes = { path = "../nes", default-features = false }
#linked_list_allocator = { version = "0.10.4", optional = true }
dhat = { version = "0.3.2" }

[[bin]]
name = "memory"
path = "src/memory.rs"

[[bin]]
name = "cpu"
path = "src/cpu.rs"

[features]
profile_cpu_no_std = []
profile_cpu_std = ["nes/default"]
default = []

[profile.release]
debug = 2
panic = "abort"

[profile.dev]
panic = "abort"